# poc-cython

./: Makefile  README.md  pyproject.toml
conda/: env.yaml
fibonacci/: Timeit.ipynb  _fib.py  fib.pyx  setup.py
helloworld/: pyximport.sh
notebooks/: Cython_in_notebooks.ipynb
say_hello/: _hello.py  hello.ipynb  hello.pyx  setup.py
